refactor(external): string to constant